# cs4ncu

./: .dockerignore  .gitignore  .mailmap  .markdownlint.yaml  .weaverignore  404.html  Dockerfile  README.md  VERSION_1.0_PLAN.md  analyze_completion.py  completion_report.csv  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  simple_analyze.py  simple_completion_report.csv  sitemap.xml  tag_dictionary.yml  寻路之南项目深度分析报告.md
.github/workflows/: cleanup-pr-preview.yml  deploy-docs.yml  pr-preview-build.yml  pr-preview-deploy-and-comment.yml  pr-preview.yml  pr-validation.yml
COMPLETION_REPORT/: index.html
aboutus/heart/: index.html
aboutus/how-to-check-in/: index.html
aboutus/wall/: index.html
appendices/a1-postgraduate-recommendation/: index.html
appendices/a2-postgraduate-entrance-exam/: index.html
class0/: README.md
course/: index.html
css/: 00-variables.css  01-layout.css  02-components.css  03-admonitions.css  99-fixes.css  extra.css
docs/: COMPLETION_REPORT.md  index.md  tags.md  项目定位分析报告.md
docs/css/: extra.css  (+6 more)
drafts/: -1.md  Survey.md  advance.md  box.md  branchprotect.md  deploy.md  dev.md  git-author.md  inspect&style.md  nav.md  overview.md  philo.md  tag.md  tree.md
issues/: 16_comment.md
lesson0/: index.html
lesson1/: index.html
lesson2/: index.html
lesson3/: index.html
lesson4/: index.html
lesson5/: index.html
lesson6/: index.html
ncu/: index.html
ncu-exclusive/: index.html
overrides/: 404.html  main.html
overview/: index.html
pyscript/: completion_analyzer.py  manage_tags.py
reports/: completion_report.csv
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
skills/: index.html
tags/: index.html
tools/: manage_tags.py  weaver_build_raw_db.py
(+396 files in other folders)
