[project]
name = "cs4ncu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-git-authors-plugin>=0.10.0",
    "mkdocs-material==9.6.17",
    "pymdown-extensions>=10.16.1",
]

[tool.setuptools]
packages = []
